# raisin

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
src/: application.rs  cli.rs  compositor.rs  gui.rs  input.rs  logging.rs  main.rs  state.rs
src/compositor/: detection.rs  mod.rs
src/compositor/integrations/: hyprland.rs  mod.rs  niri.rs
src/integrations/: mod.rs  niri.rs
