[package]
name = "raisin"
description = "Run-or-raise for Niri and Hyprland"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
enum_dispatch = "0.3.13"
gtk4 = "0.11"
gtk4-layer-shell = "0.8"
