[package]
name = "raisin"
description = "Run-or-raise for Niri and Hyprland"
version = "0.3.0"
edition = "2024"

[dependencies]
# keep-sorted start
anyhow = "1.0.100"
chrono = "0.4"
clap = { version = "4.5.51", features = ["derive"] }
enum_dispatch = "0.3.13"
fern = "0.7"
gtk4 = "0.11"
gtk4-layer-shell = "0.8"
log = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# keep-sorted end

[lints.clippy]
all = "warn"
pedantic = "warn"
